Fix horizontal scroll

--- a/src/components/Constitution/styles.module.scss
+++ b/src/components/Constitution/styles.module.scss
@@ -21,7 +21,7 @@
   background-color: $bg4;
   border-radius: 15px;
   margin-bottom: 18px;
-  width: 783px;
+  width: 750px;
 
   h3 {
     font-size: 22px;
